2007-05-24  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpsessioninfo.[ch]
	* app/widgets/gimpsessioninfoaux.[ch]
	* app/widgets/gimpsessioninfobook.[ch]
	* app/widgets/gimpsessioninfodock.c
	* app/widgets/gimpsessioninfodockable.[ch]: cleanup.

2007-05-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/pygimp-display.c: added an ID attribute and a
	delete method to the Gimp.Display object.

	* plug-ins/pygimp/gimpshelf.py (_display_id): use the ID attribute.

	* plug-ins/pygimp/gimpfu.py: enabled support for PF_DISPLAY.

2007-05-24  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpsessioninfo.[ch]: removed more code and cleaned
	up the API.

	* app/widgets/Makefile.am
	* app/widgets/gimpsessioninfodock.[ch]: added the removed code here.

	* app/widgets/gimpdialogfactory.c: changed accordingly.

2007-05-24  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpsessioninfo.[ch]: removed lots of code...

	* app/widgets/Makefile.am
	* app/widgets/gimpsessioninfoaux.[ch]
	* app/widgets/gimpsessioninfobook.[ch]
	* app/widgets/gimpsessioninfodockable.[ch]: ...and added it here.
	Also allocate all structs using GSLice.

	* app/widgets/gimpcoloreditor.c
	* app/widgets/gimpcursorview.c
	* app/widgets/gimpdataeditor.c
	* app/widgets/gimpdialogfactory.c
	* app/widgets/gimpdocked.c
	* app/widgets/gimphistogrameditor.c
	* app/widgets/gimpmenudock.c
	* app/widgets/gimppaletteeditor.c: changed accordingly.

2007-05-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/bumpmap.c: formatting, added const qualifiers.

2007-05-23  Sven Neumann  <sven@gimp.org>

	* app/dialogs/channel-options-dialog.c
	* app/dialogs/convert-dialog.c
	* app/dialogs/desaturate-dialog.c
	* app/dialogs/fade-dialog.c
	* app/dialogs/image-merge-layers-dialog.c
	* app/dialogs/image-new-dialog.c
	* app/dialogs/image-scale-dialog.c
	* app/dialogs/layer-add-mask-dialog.c
	* app/dialogs/layer-options-dialog.c
	* app/dialogs/module-dialog.c
	* app/dialogs/offset-dialog.c